@@ -8,7 +8,7 @@
  * See the file "COPYING" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * @(#) $Id: dump-jax.c,v 1.4 2000/03/21 10:30:40 strauss Exp $
+ * @(#) $Id: dump-jax.c,v 1.5 2000/03/22 09:12:35 strauss Exp $
  */
 
 #include <config.h>
@@ -692,6 +692,363 @@ static void dumpEntry(SmiNode *smiNode)
 
 
 
+static SmiNode *dumpScalars(SmiNode *smiNode)
+{
+    FILE *f;
+    char s[100];
+    char *vb_type;
+    SmiNode *parentNode, *currNode;
+    SmiType *smiType;
+    SmiRange *smiRange;
+    int i, cnt;
+    char *p;
+    char init[20];
+
+    parentNode = smiGetParentNode(smiNode);
+    sprintf(s, "%s.java", translate1Upper(parentNode->name));
+    f = fopen(s, "w");
+    if (!f) {
+	fprintf(stderr, "smidump: cannot open %s for writing: ", s);
+	perror(NULL);
+	exit(1);
+    }
+
+    fprintf(f,
+	    "/*\n"
+	    " * This Java file has been generated by smidump " VERSION "."
+	    " Do not edit!\n"
+	    " * It is intended to be used within a Java AgentX sub-agent"
+	    " environment.\n"
+	    " *\n"
+	    " * $I" "d$\n"
+	    " */\n\n");
+    fprintf(f,
+	    "import java.util.Vector;"
+	    "import java.util.Enumeration;"
+	    "import jax.*;\n"
+	    "\n");
+
+    fprintf(f, "public class %s implements AgentXGroup\n{\n\n",
+	    translate1Upper(parentNode->name));
+
+    fprintf(f,
+	    "    public AgentXOID oid;\n"
+	    "    private Vector data;\n"
+	    "    private final static long[] %sOID = {",
+	    translate1Upper(parentNode->name));
+    for (i = 0; i < parentNode->oidlen; i++) {
+	fprintf(f, "%s%d", i ? ", " : "", parentNode->oid[i]);
+    }
+    fprintf(f, "};\n\n");
+
+    /* -------       variable definitions */
+
+    for (currNode = smiNode;
+	 currNode && (currNode->nodekind == SMI_NODEKIND_SCALAR) ;
+	 currNode = smiGetNextNode(currNode,SMI_NODEKIND_ANY)) {
+	fprintf(f,
+		"    private AgentXOID %sOID;\n"
+		"    private final static long[] %sName = {",
+		translate1Upper(currNode->name),
+		translate1Upper(currNode->name)
+		);
+	for (i = 0; i < currNode->oidlen; i++) {
+	    fprintf(f, "%s%d", i ? ", " : "", currNode->oid[i]);
+	}
+	fprintf(f, "};\n");
+
+	smiType = smiGetNodeType(currNode);
+	p = getJavaType(smiType);
+	if (!strcmp(p, "long")) {
+	    strcpy(init, "0");
+	} else if (!strcmp(p, "int")) {
+	    strcpy(init, "0");
+	} else if (!strcmp(p, "byte[]")) {
+	    smiRange = smiGetFirstRange(smiType);
+	    if ((smiRange && (!smiGetNextRange(smiRange)) &&
+		 (!memcmp(&smiRange->minValue, &smiRange->maxValue,
+			  sizeof(SmiValue))))) {
+		sprintf(init, "new byte[%d]",
+			smiRange->maxValue.value.integer32);
+	    } else {
+		sprintf(init, "new byte[0]");
+	    }
+	} else if (!strcmp(p, "AgentXOID")) {
+	    strcpy(init, "new AgentXOID()");
+	} else {
+	    strcpy(init, "null");
+	}
+	fprintf(f,
+		"    protected %s %s = %s;\n",
+		getJavaType(smiGetNodeType(currNode)),
+		currNode->name,
+		init);
+	
+	if (currNode->access == SMI_ACCESS_READ_WRITE) {
+	    fprintf(f,
+		    "    protected %s undo_%s = %s;\n",
+		    getJavaType(smiGetNodeType(currNode)),
+		    currNode->name,
+		    init);
+	}
+    }
+    /* -------       constructor */
+    fprintf(f,
+	    "    public %s()\n{\n"
+	    "        oid = new AgentXOID(%sOID);\n"
+            "        data = new Vector();\n",
+	    translate1Upper(parentNode->name),
+	    translate1Upper(parentNode->name));
+
+    for (currNode = smiNode;
+	 currNode && (currNode->nodekind == SMI_NODEKIND_SCALAR) ;
+	 currNode = smiGetNextNode(currNode,SMI_NODEKIND_ANY)) {
+	fprintf(f,
+		"        %sOID = new AgentXOID(%sName);\n"
+	        "        data.addElement(%sOID);\n",
+		translate1Upper(currNode->name),
+		translate1Upper(currNode->name),
+		translate1Upper(currNode->name),
+		translate1Upper(currNode->name),
+		translate1Upper(currNode->name));
+    }
+    /* -------        group oid stuff */
+    fprintf(f,
+	    "    }\n\n"
+	    "    public AgentXOID getOID()\n    {\n"
+	    "        return oid;\n    }\n\n"
+
+	    "    public AgentXOID getSuffix(AgentXOID oid)\n    {\n"
+	    "        return oid.getSuffix(this.oid);\n    }\n");
+
+    /* -------         get & set methods */ 
+    for (currNode = smiNode;
+	 currNode && (currNode->nodekind == SMI_NODEKIND_SCALAR) ;
+	 currNode = smiGetNextNode(currNode,SMI_NODEKIND_ANY)) {
+	smiType = smiGetNodeType(currNode);
+	if (currNode->access >= SMI_ACCESS_NOTIFY) {
+	    fprintf(f,
+		    "    public %s get_%s()\n"
+		    "    {\n"
+		    "        return %s;\n"
+		    "    }\n"
+		    "\n",
+		    getJavaType(smiType),
+		    currNode->name, currNode->name);
+	}
+	if (currNode->access == SMI_ACCESS_READ_WRITE) {
+	    fprintf(f,
+		    "    public int set_%s(AgentXSetPhase phase, %s value)\n"
+		    "    {\n",
+		    currNode->name,
+		    getJavaType(smiGetNodeType(currNode)));
+	    fprintf(f,
+		    "        switch (phase.getPhase()) {\n"
+		    "        case AgentXSetPhase.TEST_SET:\n"
+		    "            undo_%s = %s;\n",
+		    currNode->name,
+		    currNode->name);
+	    if (!strcmp("byte[]", getJavaType(smiGetNodeType(currNode)))) {
+		fprintf(f,
+			"            %s = new byte[value.length];\n"
+			"            for(int i = 0; i < value.length; i++)\n"
+			"                %s[i] = value[i];\n",
+			currNode->name,
+			currNode->name);
+	    } else {
+		fprintf(f,
+			"            %s = value;\n",
+			currNode->name);
+	    }
+
+	    fprintf(f,
+		    "            break;\n"			
+		    "        case AgentXSetPhase.COMMIT:\n");
+ 	    if (!strcmp("byte[]", getJavaType(smiGetNodeType(currNode)))) {
+		fprintf(f,
+			"            if (undo_%s == null)\n",
+			currNode->name);
+	    } else {
+		fprintf(f,
+			"            if (undo_%s == 0)\n",
+			currNode->name);
+	    }
+	    fprintf(f,
+		    "	             return AgentXResponsePDU.COMMIT_FAILED;\n"
+		    "            break;\n"
+		    "        case AgentXSetPhase.UNDO:\n"
+		    "            %s = undo_%s;\n"
+		    "            break;\n",
+		    currNode->name,
+		    currNode->name);
+	    fprintf(f,
+		    "        case AgentXSetPhase.CLEANUP:\n");
+ 	    if (!strcmp("byte[]",getJavaType(smiGetNodeType(currNode)))) {
+		fprintf(f,
+			"            undo_%s = null;\n",
+			currNode->name);
+	    } else {
+		fprintf(f,
+			"            undo_%s = 0;\n",
+			currNode->name);
+	    }
+	    fprintf(f,
+		    "            break;\n"
+		    "        default:\n"
+		    "            return AgentXResponsePDU.PROCESSING_ERROR;\n"
+		    "        }\n"
+                    "        return AgentXResponsePDU.NO_ERROR;\n"
+                    "    }\n");
+	}
+    }
+    /* ------    handle get get-next and set requests */
+    fprintf(f,
+	    "    public AgentXVarBind getElement(AgentXOID oid)\n    {\n"
+	    "        AgentXOID pos = null;\n"
+	    "        Enumeration enum = data.elements();\n"
+	    "        while (enum.hasMoreElements()){\n"
+	    "            pos = (AgentXOID) enum.nextElement();\n"
+	    "            if (pos.compareTo(oid)==0) break;\n"
+	    "        }\n"
+	    "        if ((pos == null)||(pos.compareTo(oid)!=0))\n"
+	    "            return new AgentXVarBind(oid,"
+	    " AgentXVarBind.NOSUCHOBJECT);\n"
+	    "        else {\n"
+	    );
+    for (currNode = smiNode;
+	 currNode && (currNode->nodekind == SMI_NODEKIND_SCALAR) ;
+	 currNode = smiGetNextNode(currNode,SMI_NODEKIND_ANY)) {    
+	fprintf(f,
+		"            if (pos == %sOID)\n"
+		"                return new AgentXVarBind(oid,"
+		" AgentXVarBind.%s, \n"
+		"                                         get_%s());\n",
+		translate1Upper(currNode->name),
+		getAgentXType(smiGetNodeType(currNode)),
+		currNode->name
+		);
+    }
+    fprintf(f,
+	    "        }\n"
+	    "        return new AgentXVarBind(oid,"
+	    " AgentXVarBind.NOSUCHOBJECT);\n    }\n\n");
+	
+    fprintf(f,
+	    "    public int setElement(AgentXSetPhase phase,"
+	    " AgentXVarBind inVb)\n    {\n"
+	    "        AgentXOID pos = null;\n"
+	    "        Enumeration enum = data.elements();\n"
+	    "        AgentXOID oid = inVb.getOID();\n"
+	    "        while (enum.hasMoreElements()){\n"
+	    "            pos = (AgentXOID) enum.nextElement();\n"
+	    "            if (pos.compareTo(oid)==0) break;\n"
+	    "        }\n"
+	    "        if ((pos == null)||(pos.compareTo(oid)!=0))\n"
+	    "            return AgentXResponsePDU.INCONSISTENT_NAME;\n"
+	    "        else {\n"
+	    );
+
+    for (currNode = smiNode;
+	 currNode && (currNode->nodekind == SMI_NODEKIND_SCALAR) ;
+	 currNode = smiGetNextNode(currNode,SMI_NODEKIND_ANY)) {
+	vb_type = getJavaType(smiGetNodeType(currNode));
+	vb_type = strcmp("byte[]", vb_type) ? vb_type : "bytes";
+	if (currNode->access == SMI_ACCESS_READ_WRITE)
+	    fprintf(f,
+		    "            if (pos == %sOID)\n"
+		    "                return "
+		    "set_%s(phase, inVb.%sValue());\n",
+		    translate1Upper(currNode->name),
+		    currNode->name,
+		    vb_type
+		    );
+    }
+    fprintf(f,
+	    "        }\n"
+	    "        return AgentXResponsePDU.NOT_WRITABLE;\n"
+	    "    }\n\n");
+    fprintf(f,
+	    "    public AgentXVarBind getNextElement(AgentXOID oid)\n    {\n"
+	    "        AgentXOID pos = null;\n"
+	    "        Enumeration enum = data.elements();\n"
+	    "        while (enum.hasMoreElements()){\n"
+	    "            pos = (AgentXOID) enum.nextElement();\n"
+	    "            if (pos.compareTo(oid)>0) break;\n"
+	    "        }\n"
+	    "        if ((pos == null)||(pos.compareTo(oid)<=0))\n"
+	    "            return new AgentXVarBind(oid,"
+	    " AgentXVarBind.ENDOFMIBVIEW);\n"
+	    "        else {\n"
+	    );
+    for (currNode = smiNode;
+	 currNode && (currNode->nodekind == SMI_NODEKIND_SCALAR) ;
+	 currNode = smiGetNextNode(currNode,SMI_NODEKIND_ANY)) {    
+	fprintf(f,
+		"            if (pos == %sOID)\n"
+		"                return new AgentXVarBind(pos,"
+		" AgentXVarBind.%s, \n"
+		"                                         get_%s());\n",
+		translate1Upper(currNode->name),
+		getAgentXType(smiGetNodeType(currNode)),
+		currNode->name
+		);
+    }
+    fprintf(f,
+	    "        }\n"
+	    "        return new AgentXVarBind(pos,"
+	    " AgentXVarBind.ENDOFMIBVIEW);\n    }\n\n");
+    fprintf(f,
+	    "}\n\n");
+
+    fclose(f);
+    /* skip all already processed nodes */
+    for(;
+	smiNode && (smiNode->nodekind == SMI_NODEKIND_SCALAR);
+	smiNode = smiGetNextNode(smiNode, SMI_NODEKIND_ANY)) {
+    }
+    return smiNode;
+}
+
+
+
+static void dumpNotif(SmiNode *smiNode)
+{
+    FILE *f;
+    char s[100];
+
+    sprintf(s, "%s.java", translate1Upper(smiNode->name));
+    f = fopen(s, "w");
+    if (!f) {
+	fprintf(stderr, "smidump: cannot open %s for writing: ", s);
+	perror(NULL);
+	exit(1);
+    }
+
+    fprintf(f,
+	    "/*\n"
+	    " * This Java file has been generated by smidump " VERSION "."
+	    " Do not edit!\n"
+	    " * It is intended to be used within a Java AgentX sub-agent"
+	    " environment.\n"
+	    " *\n"
+	    " * $I" "d$\n"
+	    " */\n\n");
+    fprintf(f,
+	    "import jax.*;\n"
+	    "\n");
+
+    fprintf(f, "public class %s extends AgentXNotification\n{\n\n",
+	    translate1Upper(smiNode->name));
+    
+
+    fprintf(f,
+	    "}\n\n");
+
+    fclose(f);
+}
+
+
+
 int dumpJax(char *modulename, int flags)
 {
     SmiModule    *smiModule;
@@ -718,6 +1075,17 @@ int dumpJax(char *modulename, int flags)
 	}
     }
     
+    for(smiNode = smiGetFirstNode(smiModule, SMI_NODEKIND_SCALAR);
+	smiNode;
+	smiNode = smiGetNextNode(smiNode, SMI_NODEKIND_SCALAR)) {
+	smiNode = dumpScalars(smiNode); 
+    }
+
+    for(smiNode = smiGetFirstNode(smiModule, SMI_NODEKIND_NOTIFICATION);
+	smiNode;
+	smiNode = smiGetNextNode(smiNode, SMI_NODEKIND_NOTIFICATION)) {
+	dumpNotif(smiNode);
+    }
     
     return 0;
 }
